--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,133 @@
+*, :after, :before {
+  box-sizing: inherit;
+
+}
+body {
+  background-color: rgb(13,17,23);
+  overflow-x: hidden;
+  font-family: 'Poppins', sans-serif;
+}
+button {
+  font-family: inherit;
+}
 .App {
+  width: 100vw;
+}
+main {
+  width: 100%;
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
+  position: relative;
+}
+article {
+  width: 1140px;
+  max-width: 100%;
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 32px;
+  padding-right: 32px;
+  color: rgb(139, 148, 158);
+  font-size: 1.125rem;
+  box-sizing: border-box;
+}
+h1 {
+  font-size: 3.0rem;
+  margin-bottom: 0;
+  color: rgb(201, 209, 217);
+  font-weight: 500;
+}
+p {
+  margin-top: 0.75rem;
+  margin-bottom: 0.75rem;
+}
+
+.Tabs {
+  border-bottom: solid 1px rgb(33,38,45);
+}
+
+.Tabs button {
+  appearance: none;
+  background: none;
+  border: none;
+  color: rgb(201, 209, 217);
+  font-size: 1.5rem;
+  cursor: pointer;
+  height: 48px;
+  padding: 0 32px;
+  font-weight: 500;
+}
+
+.Tabs button:hover {
+  border-bottom: solid 2px rgba(110, 118, 129, 0.4);
+}
+
+.Tabs button.active {
+  border-bottom: solid 2px rgb(215, 58, 73);
+}
+
+.Thumbnails {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: flex-end;
+}
+
+.Thumbnails__Item {
+  flex: 1 1 33%;
+  max-width: 33%;
+  padding: 16px;
+  position: relative;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.Thumbnails__Item a {
+  transition: transform 0.3s;
+  width: 100%;
+  position: relative;
+  box-sizing: content-box;
+  display: inline-flex;
+  cursor: pointer;
+}
+.Thumbnails__Item a:hover {
+  transform: translateY(-4px);
+}
+.Thumbnails__Item img {
+  width: 100%;
+  height: 100%;
+  border-radius: 5px;
+  display: inline-block;
+  object-fit: contain;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.Thumbnails__Item h4 {
+  margin: 0;
+  font-weight: 500;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.Thumbnails__Item h5 {
+  margin: 0;
+  font-weight: 400;
+  text-align: left;
+}
+
+.Gallery {
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  flex-wrap: wrap;
+}
+
+.Gallery__Item{
+  flex-grow: 1;
+  height: 300px;
+  margin: 8px;
+  display: inline-flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
 }
 
-.App-link {
-  color: #61dafb;
+.Gallery__Item img {
+  min-width: 100%;
+  max-height: 100%;
+  object-fit: contain;
+  object-position: left center;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
