--- a/src/App.css
+++ b/src/App.css
@@ -6,12 +6,7 @@ body {
   background-color: rgb(13,17,23);
   overflow-x: hidden;
 }
-button {
-  font-family: inherit;
-}
-.App {
-  width: 100vw;
-}
+
 main {
   width: 100%;
   margin-left: auto;
@@ -19,6 +14,7 @@ main {
   display: block;
   position: relative;
 }
+
 article {
   width: 1140px;
   max-width: 100%;
@@ -31,12 +27,14 @@ article {
   box-sizing: border-box;
   padding-bottom: 400px;
 }
+
 h1 {
   font-size: 3.0rem;
   margin-bottom: 0;
   color: rgb(201, 209, 217);
   font-weight: 500;
 }
+
 p {
   margin-top: 0.75rem;
   margin-bottom: 0.75rem;
@@ -44,6 +42,18 @@ p {
 
 p.description {
   margin-bottom: 3rem;
+}
+
+a {
+  color:rgb(215, 58, 73);
+}
+
+button {
+  font-family: inherit;
+}
+
+.App {
+  width: 100vw;
 }
 
 .Tabs {
@@ -92,9 +102,11 @@ p.description {
   display: inline-flex;
   cursor: pointer;
 }
+
 .Thumbnails__Item a:hover {
   transform: translateY(-4px);
 }
+
 .Thumbnails__Item img {
   width: 100%;
   height: 100%;
@@ -119,7 +131,7 @@ p.description {
   flex-wrap: wrap;
 }
 
-.Gallery__Item{
+.Gallery__Item {
   flex-grow: 1;
   height: 300px;
   margin: 8px;
@@ -134,4 +146,3 @@ p.description {
   object-fit: contain;
   object-position: left center;
 }
-
